<resources>
    <string name="app_name">Checkboxes_and_etc</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="oreo_cookie">Oreo Cookie Crumbles</string>
    <string name="button_toast">Show Toast</string>
</resources>